syntax = "proto3";

package calculator;

option go_package="./proto";

message SumRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}

message SumResponse {
    int32 result = 1;
}

message PNDRequest {
    int32 number = 1;
}

message PNDResponse {
    int32 result = 1;
}

message AvgRequest {
    float number = 1;
}

message AvgResponse {
    float result = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc PrimeNumberDecomposition(PNDRequest) returns (stream PNDResponse) {}
    rpc Average(stream AvgRequest) returns (AvgResponse) {}
}
